# ChangeLog for app-text/krop
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/krop/ChangeLog,v 1.3 2015/05/23 01:39:49 mrueg Exp $

*krop-0.4.7 (23 May 2015)

  23 May 2015; Manuel Rüger <mrueg@gentoo.org> +krop-0.4.7.ebuild:
  Version bump.

  27 Oct 2014; Samuli Suominen <ssuominen@gentoo.org> krop-0.4.6.ebuild:
  Remove obsolete python2_6 support in favour of python2_7, mimicing what's
  being done in dev-python/python-poppler-qt4.

*krop-0.4.6 (10 Oct 2014)

  10 Oct 2014; Andreas K. Huettel <dilfridge@gentoo.org> +krop-0.4.6.ebuild,
  +metadata.xml:
  New package. Based on the ebuild by Armin Straub (upstream author).