@@ -1,6 +1,6 @@
-DIST krop-0.4.6.tar.gz 30046 SHA256 31931fa06fbe6ee393f7a5441ca987e2daf5029c5ca5fccfa35877e906932b84 SHA512 537a20fbda0fdd9cf4f013285082c465226cc95dc013f1b6b3d3edd625bc06a35528538bc96dc7d521c5477135fa0a42376f2e687a505e04edd16b24581034aa WHIRLPOOL 94f80ede3be58b34e4cd81d28d1cc9c970c162638ee2a615d2e804a1641c1e372865e850979d99ab72591817ad9115c9faaa537e5a3180c7727427800c32f45e
 DIST krop-0.4.7.tar.gz 34559 SHA256 fd44f83437ef6a1cb2933ab94e78385f9d7dd7b271d24549eadea700d93b84af SHA512 b38973b2084d1ac05d71e842137793d3569a1d46668e506e8a58eac4f7bd366db177d9f8af8243ed13cfe6f73885e0998ad91a1ded4c02f6d0d0102809476d10 WHIRLPOOL ecdf833981b922de9acee9ddc1467cfc056b91766ef8f4dcfc4b98b5b63fb55924f9df3d6aa3ac99a82ef86f2f8ef608ce7b2d62c52930d059a53b0121932d52
-EBUILD krop-0.4.6.ebuild 687 SHA256 71e3fe90b3d9ed09328e0113fdf58599bdd7e439f1494ce350787bb50ce3cb50 SHA512 ec8b9fe4594185e1ef4ce1e80fa351e07975798e44b38c163cf76b3558075430e19bbdb210fcf9e490f3609ac3af0a7d684d81eb60da9c2349d9c490ee295b84 WHIRLPOOL dcc07e2ae9b0f5a92fcdf28ce2de3f08d6c8dd75339e38ef6bbdc3e9efd313152fd22e0f4477f575cb701e0a534ad93305d30a63422c50d41b19976637c73863
+DIST krop-0.4.8.tar.gz 34948 SHA256 71668fe54820ad11dc47f8caddc56e0d2553975e768bd724f26fa5f5389b0aab SHA512 440a3dff6c13eb83dc9ccbbcf672a297d66d66fbf9508e3c6ceda3b043868102afb1df3401fcf06adbea1baea92444ad0dfa2fd8e74b2d993c9fe4903c9327a1 WHIRLPOOL 65aa1d73dca26d3522d1bdf75501f25340487529057bdbbaeb90472d0d518e6e54a31e2b9f1f08c6037636cd83c4ef128444c519cafae3346c8e80489d7564dd
 EBUILD krop-0.4.7.ebuild 683 SHA256 32a3d33ea62b2cc82e51c1c40f1cadcd25f1f390894438bd4244fa3ed824d72b SHA512 653c0e11418ac5a93d049f7cca3d3595ac3b28eba0d521225a6c4b1f1bd0f3c5aa684acf93251482c8874cf60f10f25a3f461a69f9800e289ff4df142b7e56b2 WHIRLPOOL 5cec81073bf15dd12e682adc0b434130a7a8472c0553d8389f3042e5847d0777899f77432b2bb8bbb67d7fe6aac39f05239d6d3878dd19b10a73617ae4bb6f7e
-MISC ChangeLog 698 SHA256 080898d0d7485b0fdc84fa37169e962726770c2c384a21b798b7a69e95849127 SHA512 be46462805a9c6e1b7fae3877f516d7e8e353ef16cef11b9f5fc110f953960f41a4adee778880ed36e043cd9361c2b2fc87a4e555d5725c775333e10ef569a2c WHIRLPOOL 996e508c6a347225421775f4ac04dce3e74ccce98af7209fc64ea7025c3b718a897b5976d1f55f628328159399b5f647d32bacb4640534df5e7df455c66fd527
+EBUILD krop-0.4.8.ebuild 699 SHA256 777aabc474231b7795e673afe86de46efd8004c26de227e0e180abac87a65859 SHA512 65b74123683c434431008f7eaabba4b1ff87cb49941311edb7c4e782d73d25e5908a8b0e804b37297e1fcde4611a1c4ad8e8eae2b0c037f72fc044d80050ac6f WHIRLPOOL 6aaefb80d9ef43ff8c9ea3dc9a3cd03895333be0317c2360a9aa719839ba28cd194a68605bb1150c7fd62cfe66674fa6c4401de23ced7f67d520c329a8fe93b0
+MISC ChangeLog 844 SHA256 a46cf3582bd1928b421de2c56b0aa42678017bc1f0a739056b123c0b079e41d9 SHA512 a2a92b700852f947375a35af4b3434490c0a781798107869c199ad86c04d6888d9757e00fb5543d9672e809faefb79fb53ff40a2683da3796efd31a02dca20a1 WHIRLPOOL bb34f7f0ab6537d7c025eac1b0d962d7a1a9ef4b2e837535dd38c7157705c8a59708995260c3f242b53d1aac57857ac2fbdc8a15b7d6b0bcae9f53111606cbd8
 MISC metadata.xml 225 SHA256 3b5f838ba3b15ee19ba102b56b0642bc116b6d3410de498f3e711fdffca93dcc SHA512 3c2687f9d7866d9191a9bab3d33a26caf638ceb4202477e0e90bfa6ba0b4f90dd524db6c73c4e6d1f5136e278d0747156636d46ef8b8ae9a1ae0d2cbb0aaed16 WHIRLPOOL 8aacff78611686ed2f9465fb1d173675b5df8d56bf7cd1a74f4e1d3842ba760e91bee79c2417909647e11a9bd638428474da4760f95f2250271d5a80f8872bfb
