@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/krop/krop-0.4.6.ebuild,v 1.2 2014/10/27 05:46:07 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/krop/krop-0.4.8.ebuild,v 1.1 2015/07/13 22:23:57 mrueg Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -17,8 +17,8 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 RDEPEND="dev-python/python-poppler-qt4[${PYTHON_USEDEP}]
-	dev-python/pyPdf[${PYTHON_USEDEP}]"
-DEPEND="${RDEPEND}"
+	dev-python/pyPdf[${PYTHON_USEDEP}]
+	dev-python/PyQt4[${PYTHON_USEDEP}]"
 
 src_install() {
 	distutils-r1_src_install
