@@ -1,6 +1,12 @@
 # ChangeLog for app-text/krop
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/krop/ChangeLog,v 1.3 2015/05/23 01:39:49 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/krop/ChangeLog,v 1.4 2015/07/13 22:23:57 mrueg Exp $
+
+*krop-0.4.8 (13 Jul 2015)
+
+  13 Jul 2015; Manuel Rüger <mrueg@gentoo.org> +krop-0.4.8.ebuild,
+  -krop-0.4.6.ebuild:
+  Version bump. Remove old.
 
 *krop-0.4.7 (23 May 2015)
 
